Completed (basic) tag support, including import.
